--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Primera Página desde main</title>
+    <title>Mi Primera Página</title>
 </head>
 <body>
     <h2>Titulo</h2>
+    <p>Nuevo contenido</p>
 </body>
 </html>
