--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Primera Página</title>
+    <title>Mi Primera Página modificada desde login</title>
 </head>
 <body>
     <h2>Titulo</h2>
     <p>Nuevo contenido</p>
+    <p>Otro</p>
 </body>
 </html>
